[package]
name = "print_perf"
version = "0.1.8"
authors = ["Carl Fredrik Samson <cf@samson.no>"]
edition = "2018"
description = """
Ergonomic print optimization for Rust. This crate will provide a struct and a
helper macro that you can use to measure and print out the time between two 
points in your code.
"""
documentation = "https://docs.rs/print_perf"
homepage = "https://github.com/cfsamson/print-perf"
repository = "https://github.com/cfsamson/print-perf"
readme = "README.md"
keywords = ["measurement", "perf", "performance", "time", "print"]
categories = ["development-tools"]
license = "Unlicense OR MIT"

[dependencies]

